--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   "dependencies": {
     "@aws-crypto/sha256-js": "^2.0.2",
     "@ton-community/func-js": "^0.1.5",
+    "@types/coingecko-api": "^1.0.10",
     "bn.js": "^5.2.1",
+    "coingecko-api": "^1.0.10",
     "prando": "^6.0.1",
     "qrcode-terminal": "^0.12.0",
     "ton": "^12.1.5",
